Add reset and organize stylesheets

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Recept</title>
-    <link href="styles/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
+
+    <link href="styles/reset.css" rel="stylesheet" />
+    <link href="styles/global.css" rel="stylesheet" />
+    <link href="styles/home.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -42,7 +45,7 @@
 
                 <div class="main-body__container">
                     <section class="main-body__card">
-                        <a class="main-body__link--text" href="/pancake.html">
+                        <a class="main-body__link--text" href="pancake.html">
                             <h2 class="main-body__recipe">Pannkakor</h2>
                             <p class="main-body__content">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
@@ -50,7 +53,7 @@
                                 accumsan dui.
                             </p>
                         </a>
-                        <a class="main-body__link--image" href="/pancake.html">
+                        <a class="main-body__link--image" href="pancake.html">
                             <img class="main-body__image"
                                 alt="Pannkakor med bär och grädde på en tallrik, samt hallon och blåbär i var sin skål vid sidan om"
                                 src="images/pannkakor-gott.jpg">
@@ -58,7 +61,7 @@
                     </section>
 
                     <section class="main-body__card">
-                        <a class="main-body__link--text" href="/pancake.html">
+                        <a class="main-body__link--text" href="pancake.html">
                             <h2 class="main-body__recipe">Citronglass</h2>
                             <p class="main-body__content">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
@@ -66,7 +69,7 @@
                                 accumsan dui.
                             </p>
                         </a>
-                        <a class="main-body__link--image" href="/pancake.html">
+                        <a class="main-body__link--image" href="pancake.html">
                             <img class="main-body__image"
                                 alt="En kula citronglass tillsammans med en skiva citron inuti en liten glasmugg, dekorerad på en tallrik"
                                 src="images/citrus-icecream.jpg">
@@ -74,7 +77,7 @@
                     </section>
 
                     <section class="main-body__card">
-                        <a class="main-body__link--text" href="/pancake.html">
+                        <a class="main-body__link--text" href="pancake.html">
                             <h2 class="main-body__recipe">Hallon-crepes</h2>
                             <p class="main-body__content">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
@@ -82,7 +85,7 @@
                                 accumsan dui.
                             </p>
                         </a>
-                        <a class="main-body__link--image" href="/pancake.html">
+                        <a class="main-body__link--image" href="pancake.html">
                             <img class="main-body__image"
                                 alt="Crepes fyllda med hallon och skogsbär, med banan och choklad vid sidan och toppat med mynta"
                                 src="images/hallon-crepes.jpg">
@@ -90,7 +93,7 @@
                     </section>
 
                     <section class="main-body__card">
-                        <a class="main-body__link--text" href="/pancake.html">
+                        <a class="main-body__link--text" href="pancake.html">
                             <h2 class="main-body__recipe">Våfflor med Nutella</h2>
                             <p class="main-body__content">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor erat, dapibus
@@ -98,7 +101,7 @@
                                 accumsan dui.
                             </p>
                         </a>
-                        <a class="main-body__link--image" href="/pancake.html">
+                        <a class="main-body__link--image" href="pancake.html">
                             <img class="main-body__image"
                                 alt="Flera lager av våfflor sprudlande med skivad jordgubb, små klickar grädde och mynta-blad dekorerade överallt på våfflorna"
                                 src="images/vaffla-nutella.jpg">
