Fix issue of stylesheet and href linking

--- a/pancake.html
+++ b/pancake.html
@@ -10,19 +10,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
 
-    <link href="styles/reset.css" rel="stylesheet" />
-    <link href="styles/global.css" rel="stylesheet" />
-    <link href="styles/style.css" rel="stylesheet" />
+    <link href="./styles/reset.css" rel="stylesheet" />
+    <link href="./styles/global.css" rel="stylesheet" />
+    <link href="./styles/style.css" rel="stylesheet" />
 </head>
 
 <body>
     <a class="skiplink" href="#content">Skip to content</a>
     <header id="site-header">
         <nav class="site-header__navbar">
-            <a class="site-header__link" href="#LOGO">Receptia</a>
+            <a class="site-header__link" href="./index.html">Receptia</a>
 
             <div class="site-header__wrapper">
-                <a class="site-header__link" href="/">Recept</a>
+                <a class="site-header__link" href="./index.html">Recept</a>
                 <a class="site-header__link" href="#om-oss">Om oss</a>
                 <a class="site-header__link" href="#kontakt">Kontakt</a>
             </div>
