--- a/pancake.html
+++ b/pancake.html
@@ -17,7 +17,7 @@
 
 <body>
     <a class="skiplink" href="#content">Skip to content</a>
-    <header id="site-header">
+    <header class="site-header">
         <nav class="site-header__navbar">
             <a class="site-header__link" href="./index.html">Receptia</a>
 
@@ -27,8 +27,29 @@
                 <a class="site-header__link" href="#kontakt">Kontakt</a>
             </div>
 
-            <a class="site-header__link" href="#logga-in">Logga in</a>
+            <button 
+                onclick="document.getElementById('viewModal').showModal()" 
+                class="site-header__login-btn"
+                >Logga in</button>
+            
+            <dialog id="viewModal">
+                <div class="site-header__modal-container">
+                    <div class="site-header__modal-header">
+                    <p class="">Placeholder!</p>
+                        <button
+                        type="button"
+                        class="site-header__close-btn"
+                        onclick="document.getElementById('viewModal').close()"
+                        >x</button>
+                    </div>
+                    <form action="#" method="POST" class="site-header__form">
+                        <p>Placeholder</p>
+                    </form>
+                
+                </div>
+            </dialog>
         </nav>
+    </header>
 
     <main role="main" id="content">
         <header class="main-header">
@@ -147,6 +168,23 @@
             </footer>
         </article>
     </main>
+
+    <footer class="site-footer">
+        <form action="#" method="POST" class="site-footer__card">
+
+            <label for="user-email" class="site-footer__text">Prenumerera på de hetaste recepten:</label>
+            <input type="email" name="email"
+            id="user-email"
+            class="site-footer__input"
+            required
+            autocomplete="name" 
+            placeholder="Fyll i din epost här..."               
+            />
+
+            <button type="submit"
+            class="site-footer__submit-btn">Skicka</button>
+        </form>
+    </footer>
 
 </body>
 
