Add contact with form and footer

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
             <div class="site-header__wrapper">
                 <a class="site-header__link" href="./index.html">Recept</a>
-                <a class="site-header__link" href="#om-oss">Om oss</a>
-                <a class="site-header__link" href="./kontakt.html">Kontakt</a>
+                <a class="site-header__link" href="./about-us.html">Om oss</a>
+                <a class="site-header__link" href="./contact.html">Kontakt</a>
             </div>
 
             <button 
